fix bug with circle cropping

--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -120,7 +120,7 @@
 .rules__item {
   position: relative;
   margin: 0 0 6.2rem;
-  padding-top: 0.6rem;
+  padding-top: 1rem;
   padding-left: 6.5rem;
   break-inside: avoid;
 
@@ -148,7 +148,7 @@
     content: counter(li);
     counter-increment: li;
     position: absolute;
-    top: 0;
+    top: 0.4rem;
     left: 0;
     width: 4.5rem;
     height: 4.5rem;
@@ -166,7 +166,7 @@
     background-color: $c-purple;
     border-radius: 50%;
     position: absolute;
-    top: 0;
+    top: 0.4rem;
     left: 0;
     width: 4.5rem;
     height: 4.5rem;
