--- a/source/scss/general/animations.scss
+++ b/source/scss/general/animations.scss
@@ -349,7 +349,7 @@ body.loaded {
 
 @keyframes show-bullet {
   to {
-    transform: scale(1.5, 1.5);
+    transform: scale(1, 1);
   }
 }
 
